// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses complex inline image markdown correctly incoming markdown tree calls fallback twice 1`] = `
Array [
  Array [
    Object {
      "alt": "image",
      "position": Position {
        "end": Object {
          "column": 46,
          "line": 1,
          "offset": 45,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "title": null,
      "type": "image",
      "url": "https://image.example.com/image.jpg",
    },
  ],
  Array [
    Object {
      "alt": "image",
      "position": Position {
        "end": Object {
          "column": 53,
          "line": 2,
          "offset": 99,
        },
        "indent": Array [],
        "start": Object {
          "column": 7,
          "line": 2,
          "offset": 53,
        },
      },
      "title": null,
      "type": "image",
      "url": "https://image.example.com/image2.jpg",
    },
  ],
]
`;

exports[`parses complex inline image markdown correctly incoming markdown tree calls fallback twice 2`] = `
Array [
  Array [
    Object {
      "alt": "image",
      "position": Position {
        "end": Object {
          "column": 56,
          "line": 1,
          "offset": 55,
        },
        "indent": Array [],
        "start": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "title": null,
      "type": "image",
      "url": "https://image.example.com/image.jpg",
    },
  ],
  Array [
    Object {
      "alt": "image",
      "position": Position {
        "end": Object {
          "column": 102,
          "line": 1,
          "offset": 101,
        },
        "indent": Array [],
        "start": Object {
          "column": 56,
          "line": 1,
          "offset": 55,
        },
      },
      "title": null,
      "type": "image",
      "url": "https://image.example.com/image2.jpg",
    },
  ],
]
`;

exports[`rich-text-from-markdown should call the fallback function when a node is not supported 1`] = `
Array [
  Array [
    Object {
      "alt": "image",
      "position": Position {
        "end": Object {
          "column": 46,
          "line": 1,
          "offset": 45,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "title": null,
      "type": "image",
      "url": "https://image.example.com/image.jpg",
    },
  ],
]
`;
